--- a/package.json
+++ b/package.json
@@ -17,25 +17,25 @@
   "dependencies": {
     "node-fetch": "^3.3.2"
   },
-  "build": {
-    "appId": "com.richito.dinamica",
-    "productName": "Dinámica Richito",
-    "mac": {
-      "target": "dmg",
-      "category": "public.app-category.utilities",
-      "icon": "icon.ico"
-    },
-    "win": {
-      "target": "nsis",
-      "icon": "icon.ico"
-    },
-    "nsis": {
-      "oneClick": false,
-      "perMachine": false,
-      "allowToChangeInstallationDirectory": true,
-      "createDesktopShortcut": true,
-      "createStartMenuShortcut": true,
-      "shortcutName": "Dinámica Richito"
-    }
+ "build": {
+  "appId": "com.richito.dinamica",
+  "productName": "Dinámica Richito",
+  "mac": {
+    "target": "dmg",
+    "icon": "icon.icns"
+  },
+  "win": {
+    "target": "nsis",
+    "icon": "icon.ico"
+  },
+  "nsis": {
+    "oneClick": false,
+    "perMachine": false,
+    "allowToChangeInstallationDirectory": true,
+    "createDesktopShortcut": true,
+    "createStartMenuShortcut": true,
+    "shortcutName": "Dinámica Richito"
   }
+}
+
 }
